--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-<variable
-    name="qt"
-    type="com.zerocoder.Quete" />
+
+        <variable
+            name="qt"
+            type="com.zerocoder.Contact" />
     </data>
 
     <LinearLayout
@@ -27,15 +28,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@{qt.name}"                android:background="@color/black"
+                android:background="@color/black"
+                android:text=""
                 android:textColor="@color/white"
                 android:textSize="23dp" />
 
             <Button
+                android:id="@+id/btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:id="@+id/btn"
+
                 android:text="Update" />
         </LinearLayout>
     </LinearLayout>
