--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,40 +6,35 @@
     <data>
 
         <variable
-            name="qt"
-            type="com.zerocoder.Contact" />
+            name="quotes"
+            type="String" />
     </data>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-
         tools:context=".MainActivity">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/num"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:background="@color/black"
-                android:text=""
-                android:textColor="@color/white"
-                android:textSize="23dp" />
-
             <Button
-                android:id="@+id/btn"
-                android:layout_width="wrap_content"
+                android:id="@+id/btnAddQuote"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                android:layout_margin="32dp"
+                android:text="InsertQuote" />
 
-                android:text="Update" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="32dp"
+                android:text="@{quotes}"
+                android:textSize="32sp" />
+
         </LinearLayout>
-    </LinearLayout>
+
+    </ScrollView>
 </layout>
